Checkin: code refactor by findBugs tool